Fix articles carousel on Firefox for Obliq

--- a/frontend/themes/app1/scss/phone.scss
+++ b/frontend/themes/app1/scss/phone.scss
@@ -9399,6 +9399,11 @@ a {
 }
 
 
+.flex-fix-bug {
+  -moz-box-flex: 1 !important;
+}
+
+
 .cover-box {
   background: none;
   width: 100%;
@@ -11137,3 +11142,4 @@ a {
     opacity: 0;
   }
 }
+
